@@ -1,3 +1,6 @@
+** v2.09, xx.08.2016**
+* Change the default position of the Changelog.
+
 ** v2.08, 07.08.2016**
 * Add tabs for professions on the TradeSkill Frame.
 * Add a few CVars to the chat install.
